syntax = "proto3";

option go_package = "proto/schemas";

enum ExecutionResult {
  OK = 0;
  TIME_LIMIT_EXCEEDED = 1;
  MEMORY_ERROR = 2;
  COMPILE_ERROR = 3;
}

message JudgingRequest {
  string code = 1;
  string input = 2;
  fixed64 id_nonce = 3;
}

message GetJudgingRequestParams { string token = 1; }

message GradingResponse {
  fixed64 id_nonce = 1;
  string stdout = 2;
  string stderr = 3;
  string error_code = 4;
  string token = 5;
  ExecutionResult result = 6;
}

message GradingReply {}

service JudgingServer {
  rpc GetJudgingRequest(GetJudgingRequestParams) returns (JudgingRequest) {}
  rpc SubmitGradingResponse(GradingResponse) returns (GradingReply) {}
}
